# distributed-planning

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  environment.py  package.xml  requirements.txt  setup.py
assignment/: README.md  agent.py  dma-rrt-pset.ipynb  plan.py  requirements.txt  rrtstar.py
assignment/solutions/: planner_example.ipynb  sol_set.py
assignment/student/: agent.py  dma-rrt-pset.ipynb  visualizer.py
assignment/tests/: test_agent.py
assignment/utils/: test_agent.py
launch/: altruistic_agents.launch  basic_agents.launch  continuation_agents.launch  dma-rrt.launch  euclidean_agents.launch  reward_agents.launch
maps/city/: city.yaml
maps/empty/: empty.yaml
maps/simple/: simple.yaml
msg/: AltruisticGoal.msg  AltruisticQueue.msg  Costs.msg  Estop.msg  EstopWaypoints.msg  Goal.msg  GoalBid.msg  GoalCostPairing.msg  PlanBid.msg  Queue.msg  Registration.msg  Stats.msg  TokenHolder.msg  Waypoints.msg  WinnerID.msg  WinnerIDGoal.msg  WinnerIDWaypoints.msg
params/: agent_params.yaml
rviz/: config.rviz
scripts/: agent.py  agent_dmarrt.py  agent_rewardqueue.py  dmarrt_agent.py  environment.py  main.py  plan.py  reward_queue_agent.py  rrtstar.py
solutions/: agent.py  antenna.py  cl_rrt.py  plan.py  planner_example.ipynb  planner_example.py  planner_example2.py  rrt.py  rrt_example.ipynb  rrtstar.py  rrtstar_example.ipynb  visualizer.py
src/distributed_planning/: agent.py  agent_altruistic.py  agent_continuation.py  (+10 more)
tests/: test_agent.py  test_cl_rrt.py  test_plan.py  test_rrt.py
utils/: check_path.py  environment.py
(+2 files in other folders)
