<?xml version="1.0"?>
<package>
  <name>distributed_planning</name>
  <version>0.0.1</version>
  <description>The distributed planning package</description>

  <maintainer email="cameronp@mit.edu">Cameron Pittman</maintainer>
  <license>MIT</license>
  <url type="website">https://github.mit.edu/cameronp/distributed-planning</url>

  <author email="mabate@mit.edu">Marcus Abate</author>
  <author email="tanika@mit.edu">Tanya Smith</author>
  <author email="thumman@mit.edu">Nicole Thumma</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
</package>
